Fix empty content area collapsing to width: 0.

--- a/sources/stylesheets/_content.scss
+++ b/sources/stylesheets/_content.scss
@@ -12,7 +12,7 @@
   .content-body {
     .content-page & {
       display: inline-block;
-      max-width: calc(100% - 135px);
+      width: calc(100% - 135px);
 
       @include query($tablet) {
         display: block;
